# jvmtui

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PACKAGING.md  README.md  clippy.toml  config.example.toml  jvm-tui.spec
.github/workflows/: ci.yml  release.yml
assets/sample_outputs/: jcmd_class_histogram.txt  jcmd_heap_info.txt  jcmd_thread_print.txt  jcmd_vm_flags.txt  jcmd_vm_uptime.txt  jcmd_vm_version.txt  jstat_gcutil.txt
debian/: changelog  control  copyright  install  rules
docs/: 01-product-requirements.md  02-architecture.md  03-agentless-approach.md  04-project-structure.md  05-dependencies.md  06-jdk-tools-integration.md  07-parsers.md  08-connector-trait.md  09-metrics-collection.md  10-tui-design.md  11-keyboard-navigation.md  12-thread-view-design.md  13-configuration.md  14-implementation-phases.md  15-testing-strategy.md  ARCHITECTURE.md  README.md  phase3-implementation-plan.md
screenshots/: jvm-picker.txt  memory.txt  overview.txt
scripts/: generate-homebrew.sh  package-arch.sh  package-deb.sh  package-rpm.sh
snap/: snapcraft.yaml
src/: app.rs  cli.rs  config.rs  error.rs  export.rs  lib.rs  main.rs  theme.rs
src/jvm/: connector.rs  discovery.rs  mod.rs  types.rs
src/jvm/jdk_tools/: connector.rs  detector.rs  executor.rs  mod.rs
src/jvm/jolokia/: connector.rs  types.rs
src/jvm/ssh_jdk/: connector.rs
src/metrics/: collector.rs  mod.rs  ring_buffer.rs  store.rs
src/tui/: event.rs  mod.rs  terminal.rs
src/tui/screens/: error.rs  jvm_picker.rs  mod.rs  monitoring.rs
src/tui/views/: classes.rs  gc.rs  (+4 more)
(+16 files in other folders)
