[package]
name = "jvm-tui"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
description = "A beautiful TUI for JVM monitoring - like VisualVM for your terminal"
authors = ["Anurag Ambuj"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AnuragAmbuj/jvm-tui"
keywords = ["jvm", "java", "monitoring", "tui", "terminal"]
categories = ["command-line-utilities", "development-tools::profiling"]

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# Async Runtime
tokio = { version = "1.43", features = ["full", "process", "sync"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Error Handling
color-eyre = "0.6"
thiserror = "2.0"

# Utilities
strum = { version = "0.26", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
once_cell = "1.20"
directories = "5.0"
humantime = "2.1"
dirs = "5.0"
shellexpand = "3.1"

# HTTP Client (optional)
reqwest = { version = "0.12", features = ["json"], optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
tokio-test = "0.4"
insta = "1.41"

[features]
default = []
jolokia = ["reqwest"]

[[bin]]
name = "jvm-tui"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
codegen-units = 1
